feat: completed all testing auth
