# src/auth/auth.controller.ts
@@ -1,0 +1,36 @@
+import {
+  Controller,
+  Post,
+  Body,
+  UsePipes,
+  ValidationPipe,
+  HttpCode,
+} from '@nestjs/common';
+import { AuthService } from './auth.service';
+import { CreateUserDto } from 'src/users/dto/create-user.dto';
+import { Public } from './auth.guard';
+
+@Controller('auth')
+@UsePipes(new ValidationPipe())
+export class AuthController {
+  constructor(private readonly authService: AuthService) {}
+
+  @Post('signup')
+  @Public()
+  create(@Body() createUserDto: CreateUserDto) {
+    return this.authService.signup(createUserDto);
+  }
+
+  @Post('login')
+  @Public()
+  @HttpCode(200)
+  login(@Body() createUserDto: CreateUserDto) {
+    return this.authService.login(createUserDto.login, createUserDto.password);
+  }
+
+  @Post('refresh')
+  @HttpCode(200)
+  refresh(@Body() { refreshToken }: { refreshToken: string }) {
+    return this.authService.refresh(refreshToken);
+  }
+}
